Correction bug collapse et Intégration texte et filtre video ok

--- a/front/src/containers/AtelierHome.css
+++ b/front/src/containers/AtelierHome.css
@@ -12,7 +12,7 @@ video {
     font-size: 2rem;
     margin: 0;
     position: absolute;
-    top: 10%;
+    top: 25%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
@@ -22,7 +22,7 @@ video {
     font-size: 2rem;
     margin: 0;
     position: absolute;
-    top: 70%;
+    top: 90%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
